# langgraph_papers_scanner_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
apps/paper_scanner_app/: app.py  utils.py
apps/paper_scanner_app/methods/: process_run.py  retrieve_runs.py  store_run.py
apps/paper_scanner_app/schemas/: bigquery_schema.py
scripts/: start_paper_scanner_streamlit.py
tests/framework/tools/pdf_pre_processing/: pdf_marker.py  pdf_plumber.py
tests/framework/tools/text_splitting/: markdown_text_splitter.py
tests/utils/: importJSON.py
tests/workflows/: paper_scanner.py
